Fix breadcrumbs display on mobile.

--- a/static/companypro/assets/css/style.css
+++ b/static/companypro/assets/css/style.css
@@ -527,7 +527,7 @@ section {
 }
 @media (max-width: 991px) {
   .breadcrumbs {
-    margin-top: 58px;
+    margin-top: 130px;
   }
   .breadcrumbs .d-flex {
     display: block !important;
